[B]0.4.0[/B]
Addition of Mixed Widget
Fixed video library update label not long enough
Fixed DialogExtendedProgress.xml from closing on Home.xml
Added banner and info-wall to add-ons
Added half stars to Alaska Black font
Re-instated Arctic fade for simple home screen
-- add to guisettings.xml to revert: 
-- <setting type="bool" name="skin.arctic.home.simple.fade">true</setting>

[B]0.3.9[/B]
Moved ratings and resolution flags out to extras folder for user customisation
Dialog.Close(all,force) to Home.xml -- prevent DialogVideoInfo.xml staying open.
Made Seekbar cache bar more visible for light osd
More OSD updates...

[B]0.3.8[/B]
Fixed Poster Panel Label
Updates to RCB info screen (play game, trailer, selectable art)
Fixed RCB Autoplay video in banner and info wall
Altered Cover and Info RCB views to remove borders for 3d boxart
Added option to enable/disable submenu arrow
Fixed Dark theme volume on simple wrong colour
Thumbnail view available for all views
Poster on wider osd made smaller
Changed aspect for thumbs on osd
OSD Settings Clean-up
Merge transifex
Show info on livetv even with simplified seekbar
Added DeleteTimer.xml and RecordPrefs.xml to skin wmc pvr backend
Added "movie sets" undertitle label
Fixed Fade theme artworkdownloader gui
Artwork Downloader gui added rounded posters
Added watched indicators to fonts black and regular
Added watched indicators in medium and banner list under title
Clean-up of includes
View Header only tvshow info if infotags or clearlogo disabled

[B]0.3.7[/B]
Added infotags to OSD
Music small info shows osd like video player
Scroll title of focused pvrosdchannel
Buttons on pvrosdchannel info focus color to white
Bumped EPG font size up one

[B]0.3.6[/B]
New small style osd and video info
Fixed Weather labels wrong colour for dark theme
OSD fix for small info not showing after audio/video osd settings
RCB updates - info tags, info wall, updated banner list view
Adv Launcher - added info wall view
OSD updates and fixes
