@@ -8,7 +8,7 @@
         <include>CommonSettingsItems</include>
         <include>Common-Info-NoOptions</include>
         <control type="button" id="10">
-        	<onfocus condition="System.HasAddon(script.extendedinfo)">Runscript(script.extendedinfo,backend="true")</onfocus>
+        	<onfocus condition="System.HasAddon(script.extendedinfo)">RunScript(script.extendedinfo,backend=true)</onfocus>
 			<onfocus condition="Skin.HasSetting(Skin.Init.Complete) + Skin.HasSetting(Skin.Initialization.Items) + Skin.HasSetting(Skin.Initialization.Items2) + Skin.HasSetting(NextAired.Update) + Library.HasContent(tvshows)">RunScript(script.tv.show.next.aired,silent=True)</onfocus>
 			<onfocus condition="Skin.HasSetting(Skin.Init.Complete) + Skin.HasSetting(Skin.Initialization.Items) + Skin.HasSetting(Skin.Initialization.Items2)">ReplaceWindow(Home)</onfocus>
         	<onfocus condition="!Skin.HasSetting(Skin.Init.Complete) | !Skin.HasSetting(Skin.Initialization.Items) | !Skin.HasSetting(Skin.Initialization.Items2)">AlarmClock(Skin.Init.ItemWait,SetFocus(13),00:01,silent)</onfocus>
